--- a/build.gradle
+++ b/build.gradle
@@ -62,13 +62,13 @@ mainClassName = _mainClass
 repositories {
     mavenCentral()
 //    mavenLocal()
-//    maven {
-//        url "https://jitpack.io"
-////        // workaround to be able to specify a git hash as jitpack version
-////        metadataSources {
-////            artifact()
-////        }
-//    }
+    maven {
+        url "https://jitpack.io"
+//        // workaround to be able to specify a git hash as jitpack version
+//        metadataSources {
+//            artifact()
+//        }
+    }
 }
 
 dependencies {
@@ -163,6 +163,9 @@ dependencies {
 
     // Debuglevel Microservice Commons
     //implementation "com.github.debuglevel:microservice-commons:f24dd3964f"
+
+    // Graph Library
+    implementation 'com.github.debuglevel:java-graph-library:337047a425' // TODO: replace by release once it is available
 }
 
 // Java configuration
