Use updated graphviz library

--- a/build.gradle
+++ b/build.gradle
@@ -167,6 +167,7 @@ dependencies {
     // Graph Library
     //implementation 'com.github.debuglevel:java-graph-library:337047a425' // TODO: replace by release once it is available
     implementation 'de.debuglevel.graphlibrary:graphlibrary:0.0.2-SNAPSHOT'
+    implementation 'guru.nidi:graphviz-java:0.18.1' // TODO: because the lib above isn't fat yet
 }
 
 // Java configuration
