[Gradle Release Plugin] - pre tag commit:  '0.0.1'.

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@
 applicationGroup=de.debuglevel
 applicationModule=graph
 applicationTitle=Graph Microservice
-version=0.0.1-SNAPSHOT
+version=0.0.1
 # other settings
 kotlin.code.style=official
 # dependency versions
