--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,9 @@ plugins {
 
     // List all licenses in "build/reports/dependency-license" with "./gradlew generateLicenseReport".
     id 'com.github.jk1.dependency-license-report'
+
+    // Support for GraalVM native-image with "./gradlew nativeCompile"
+    id "io.micronaut.graalvm" version "3.2.2"
 }
 // Enhance Hibernate entities (see configuration block below).
 // TODO: move to plugins block when https://hibernate.atlassian.net/browse/HHH-13354 is resolved
@@ -55,7 +58,7 @@ ext {
     _title = applicationTitle
 }
 
-// application plugin configuration
+// Application plugin configuration
 applicationName = _title
 mainClassName = _mainClass
 
@@ -75,7 +78,7 @@ dependencies {
     // If no specific version is defined, it might be provided by the Micronaut BOM
 
     // Kotlin
-    /// provide kotlin-reflect although not used, as the jackson-kotlin module might provide its own, but maybe for an earlier Kotlin version, which would mess up things (or at least yield warnings).
+    /// Provide kotlin-reflect although not used, as the jackson-kotlin module might provide its own, but maybe for an earlier Kotlin version, which would mess up things (or at least yield warnings).
     implementation "org.jetbrains.kotlin:kotlin-reflect"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinCoroutinesVersion"
 
@@ -95,6 +98,8 @@ dependencies {
     implementation "io.github.microutils:kotlin-logging-jvm:$kotlinLoggingVersion"
     runtimeOnly "ch.qos.logback:logback-classic:$logbackVersion"
     runtimeOnly "net.logstash.logback:logstash-logback-encoder:$logstashLogbackVersion"
+    runtimeOnly "com.mattbertolini:liquibase-slf4j:$liquibaseSlf4jVersion" // makes Liquibase use SLF4J instead of java.util.logging
+    runtimeOnly "org.slf4j:jcl-over-slf4j:$jclOverSlf4jVersion" // redirect Jakarta/Apache Commons Logging to SLF4J
 
 
     // Micronaut Bill of Materials, which defines dependency versions
@@ -106,12 +111,18 @@ dependencies {
     implementation "io.micronaut:micronaut-runtime"
     implementation "io.micronaut.kotlin:micronaut-kotlin-runtime"
     implementation "javax.annotation:javax.annotation-api"
-    implementation "com.fasterxml.jackson.module:jackson-module-kotlin:$jacksonModuleKotlinVersion"
+    runtimeOnly "com.fasterxml.jackson.module:jackson-module-kotlin"
+    implementation 'org.reactivestreams:reactive-streams' // seems to be needed in Micronaut 3.0.1
 
     // Micronaut Inversion of Control / Dependency Injection
     kapt "io.micronaut:micronaut-inject-java"
     kaptTest "io.micronaut:micronaut-inject-java"
     testAnnotationProcessor "io.micronaut:micronaut-inject-java"
+
+    // Micronaut Reactive
+    //implementation "io.micronaut.rxjava2:micronaut-rxjava2" // use RxJava2 for existing implementations (e.g. ConfigurableCredentialAuthenticationProvider)
+    implementation "io.micronaut.reactor:micronaut-reactor"
+    implementation "io.micronaut.reactor:micronaut-reactor-http-client"
 
     // Micronaut Validation
     kapt "io.micronaut:micronaut-validation"
@@ -124,33 +135,35 @@ dependencies {
     implementation "io.micronaut:micronaut-http-client"
 
     // Micronaut Management & Monitoring
-    /// automatically provides the /health endpoint publicly, and some other with authentication
+    /// Automatically provides the /health endpoint publicly, and some other with authentication
     implementation 'io.micronaut:micronaut-management'
     //implementation 'io.micronaut.configuration:micronaut-jmx' // activate JMX for the endpoints
 
     // Micronaut Persistence
-    kapt "io.micronaut.data:micronaut-data-processor"
-    implementation "io.micronaut.data:micronaut-data-hibernate-jpa"
+    // kapt "io.micronaut.data:micronaut-data-processor"
+    // implementation "io.micronaut.data:micronaut-data-hibernate-jpa"
     /// JDBC Connection Pooling
-    runtimeOnly "io.micronaut.sql:micronaut-jdbc-hikari"
+    // runtimeOnly "io.micronaut.sql:micronaut-jdbc-hikari"
     //runtimeOnly "io.micronaut.sql:micronaut-jdbc-tomcat"
     //runtimeOnly "io.micronaut.sql:micronaut-jdbc-dbcp"
     /// Database drivers
-    runtimeOnly "com.h2database:h2"
-    runtimeOnly "org.mariadb.jdbc:mariadb-java-client:$mariadbVersion"
+    // runtimeOnly "com.h2database:h2"
+    // runtimeOnly "org.mariadb.jdbc:mariadb-java-client:$mariadbVersion"
     //runtimeOnly "org.postgresql:postgresql:$postgresqlVersion"
     //runtimeOnly "org.hsqldb:hsqldb:$hsqldbVersion"
     //runtimeOnly "org.apache.derby:derby:$derbyVersion"
+    /// Database Migration
+    // implementation "io.micronaut.liquibase:micronaut-liquibase"
 
     // Micronaut Security
     kapt "io.micronaut.security:micronaut-security-annotations"
     implementation "io.micronaut.security:micronaut-security"
 
     // Micronaut Service registration and discovery
-    implementation "io.micronaut:micronaut-discovery-client"
+    implementation "io.micronaut.discovery:micronaut-discovery-client"
 
     // Micronaut OpenAPI integration
-    kapt "io.micronaut.configuration:micronaut-openapi"
+    kapt "io.micronaut.openapi:micronaut-openapi"
     implementation "io.swagger.core.v3:swagger-annotations"
 
     // Micronaut Views
@@ -160,6 +173,12 @@ dependencies {
     //implementation "io.micronaut.views:micronaut-views-freemarker"
     //implementation "io.micronaut.views:micronaut-views-rocker"
     //implementation "io.micronaut.views:micronaut-views-soy"
+
+    // Micronaut gRPC
+    implementation "io.micronaut.grpc:micronaut-grpc-server-runtime"
+    implementation "io.micronaut.grpc:micronaut-grpc-client-runtime"
+    implementation "io.grpc:grpc-services:$grpcVersion"
+    implementation "io.grpc:grpc-kotlin-stub:$grpcKotlinVersion"
 
     // Debuglevel Microservice Commons
     //implementation "com.github.debuglevel:microservice-commons:f24dd3964f"
@@ -172,15 +191,15 @@ dependencies {
 
 // Java configuration
 java {
-    sourceCompatibility = JavaVersion.VERSION_1_8 // Source is Java 8 code
-    targetCompatibility = JavaVersion.VERSION_1_8 // Byte code will be JVM 8
+    sourceCompatibility = JavaVersion.VERSION_17 // Source code is this Java version
+    targetCompatibility = JavaVersion.VERSION_17 // Byte code will be this JVM version
 }
 
 // Kotlin configuration (implies compileKotlin and compileTestKotlin)
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
     kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_1_8 // Byte code will be JVM 8
-        // retain parameter names for Java reflection
+        jvmTarget = JavaVersion.VERSION_17 // Byte code will be this JVM version
+        // Retain parameter names for Java reflection
         javaParameters = true
     }
 }
@@ -227,10 +246,12 @@ tasks.shadowDistZip.enabled = false
 
 // Configuration of net.researchgate.release plugin
 release {
-    failOnCommitNeeded = true // fail because changed files would be committed automatically
-    failOnUnversionedFiles = false // don't fail because unversioned files would not be committed automatically
+    failOnCommitNeeded = true // Fail because changed files would be committed automatically
+    failOnUnversionedFiles = false // Don't fail because non-versioned files would not be committed automatically
     git {
-        requireBranch = 'master' // depends on old vs. new default branch
+        // Depends on old vs. new default branch
+        requireBranch = 'master'
+        // requireBranch = 'main'
     }
 }
 
@@ -249,10 +270,10 @@ test {
 allOpen {
     annotation("io.micronaut.aop.Around")
     //// open @Singleton for Mockito
-    //annotation("javax.inject.Singleton")
+    //annotation("jakarta.inject.Singleton")
 }
 
-// Enhance Hibernate entities in bytecode.
+// Enhance Hibernate entities in byte code.
 hibernate {
     enhance {
         enableLazyInitialization = true
@@ -261,29 +282,29 @@ hibernate {
     }
 }
 
-//// gRPC
-//sourceSets {
-//    main {
-//        java {
-//            srcDirs 'build/generated/source/proto/main/grpc'
-//            srcDirs 'build/generated/source/proto/main/grpckt'
-//            srcDirs 'build/generated/source/proto/main/java'
-//        }
-//    }
-//}
-//protobuf {
-//    protoc { artifact = "com.google.protobuf:protoc:$protocVersion" }
-//    plugins {
-//        grpc { artifact = "io.grpc:protoc-gen-grpc-java:$grpcVersion" }
-//        grpckt { artifact = "io.grpc:protoc-gen-grpc-kotlin:$grpcKotlinVersion:jdk7@jar" }
-//    }
-//    generateProtoTasks {
-//        all()*.plugins {
-//            grpc {}
-//            grpckt {}
-//        }
-//    }
-//}
+// gRPC
+sourceSets {
+    main {
+        java {
+            srcDirs 'build/generated/source/proto/main/grpc'
+            srcDirs 'build/generated/source/proto/main/grpckt'
+            srcDirs 'build/generated/source/proto/main/java'
+        }
+    }
+}
+protobuf {
+    protoc { artifact = "com.google.protobuf:protoc:$protocVersion" }
+    plugins {
+        grpc { artifact = "io.grpc:protoc-gen-grpc-java:$grpcVersion" }
+        grpckt { artifact = "io.grpc:protoc-gen-grpc-kotlin:$grpcKotlinVersion:jdk7@jar" }
+    }
+    generateProtoTasks {
+        all()*.plugins {
+            grpc {}
+            grpckt {}
+        }
+    }
+}
 
 // Filter out beta versions et cetera on dependency update check.
 dependencyUpdates.resolutionStrategy {
@@ -299,11 +320,10 @@ dependencyUpdates.resolutionStrategy {
     }
 }
 
-// -noverify skips verifying JAR files (reduce startup time)
 // -XX:TieredStopAtLevel=1 limits optimizations of the HotSpot compiler and its runtime overhead (reduce startup time)
 tasks.withType(JavaExec) {
     //classpath += configurations.developmentOnly
-    jvmArgs('-noverify', '-XX:TieredStopAtLevel=1', '-Dcom.sun.management.jmxremote')
+    jvmArgs('-XX:TieredStopAtLevel=1', '-Dcom.sun.management.jmxremote')
     if (gradle.startParameter.continuous) {
         systemProperties(
                 'micronaut.io.watch.restart': 'true',
